syntax = "proto3";

option go_package = "github.com/atadzan/grinex-rate-service/pb";

package rateservice.v1;

import "google/protobuf/timestamp.proto";

service RateService {
  rpc GetRates(GetRatesReq) returns (GetRatesResp) {}
  rpc Healthcheck(HealthcheckReq) returns (HealthcheckResp) {}
}

message GetRatesReq {}

message GetRatesResp {
  string trading_pair = 1;
  double ask_price = 2;     
  double bid_price = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message HealthcheckReq {}

message HealthcheckResp {
  string status = 1;
  string message = 2;
} 